--- a/src/index.css
+++ b/src/index.css
@@ -45,17 +45,9 @@ body.dark-theme header {
   background-color: transparent;
 }
 
-body.dark-theme header span {
-  color: white;
-}
-
 body.dark-theme a.active {
   color: black !important;
   background-color: white;
-}
-
-body.dark-theme .connected-indicator {
-  border-color: white;
 }
 
 body.dark-theme .credit {
@@ -66,8 +58,14 @@ body.dark-theme .credit .name {
   color: white;
 }
 
-body.dark-theme .ava-eth-logo {
+body.dark-theme .chain-bridge-sub-logo {
   color: white;
+}
+
+body.dark-theme .ava-eth-logo {
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
+    1px 1px 0 white;
+  color: black;
 }
 
 .basic-box-shadow {
